{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 21,
  "lineage": "bb91ac33-7998-7f96-addc-55dc69029afb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mod",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mod",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0be3e6f84d3b968cd",
            "arn": "arn:aws:ec2:ap-northeast-2:554975310287:instance/i-06ba4848e9c65108a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-06ba4848e9c65108a",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "terratest-aws-ec2",
            "monitoring": false,
            "primary_network_interface_id": "eni-096d7be5c6011ba89",
            "private_dns": "ip-172-31-30-224.ap-northeast-2.compute.internal",
            "private_ip": "172.31.30.224",
            "public_dns": "ec2-52-79-242-114.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.79.242.114",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "iops": 100,
                "volume_id": "vol-0e734fe4f3f5d4df7",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terratest-aws-ec2-zzLBaL-ec2-instances"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-5964a214",
            "tags": {
              "Environment": "production",
              "Name": "terratest-aws-ec2-zzLBaL01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ce46e5e8a50882f4"
            ]
          },
          "depends_on": [
            "aws_security_group.security_group_on_instances"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0be3e6f84d3b968cd",
            "arn": "arn:aws:ec2:ap-northeast-2:554975310287:instance/i-01b635fff9806f8f5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-01b635fff9806f8f5",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "terratest-aws-ec2",
            "monitoring": false,
            "primary_network_interface_id": "eni-09dae642d3a630418",
            "private_dns": "ip-172-31-23-130.ap-northeast-2.compute.internal",
            "private_ip": "172.31.23.130",
            "public_dns": "ec2-52-79-147-173.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.79.147.173",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "iops": 100,
                "volume_id": "vol-0395cbec3d12ac59e",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terratest-aws-ec2-zzLBaL-ec2-instances"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-5964a214",
            "tags": {
              "Environment": "production",
              "Name": "terratest-aws-ec2-zzLBaL02"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ce46e5e8a50882f4"
            ]
          },
          "depends_on": [
            "aws_security_group.security_group_on_instances"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_on_instances",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:554975310287:security-group/sg-0ce46e5e8a50882f4",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ce46e5e8a50882f4",
            "ingress": [],
            "name": "terratest-aws-ec2-zzLBaL-ec2-instances",
            "name_prefix": null,
            "owner_id": "554975310287",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terratest-aws-ec2-zzLBaL-ec2-instances"
            },
            "timeouts": null,
            "vpc_id": "vpc-4650ea2f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_egress_on_instances_to_anywhere",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-598220616",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ce46e5e8a50882f4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.security_group_on_instances"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_ingress_on_instances_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-1029723840",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ce46e5e8a50882f4",
            "self": true,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.security_group_on_instances"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_ingress_on_instances_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1435101862",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ce46e5e8a50882f4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.security_group_on_instances"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_ingress_on_instances_sgs",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    }
  ]
}